// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "List, find, and show Azure resources across subscriptions or resource groups. USE FOR: list virtual machines, list VMs, list storage accounts, list websites, list web apps, list container apps, show resources, find resources, resource inventory, find resources by tag, tag analysis, orphaned resource discovery (not for cost analysis), unattached disks, count resources by type, cross-subscription lookup, Azure Resource Graph queries. DO NOT USE FOR: deploying/changing resources, cost optimization, or non-Azure clouds.",
  "extractedKeywords": [
    "accounts",
    "across",
    "aks",
    "analysis",
    "app service",
    "apps",
    "azure",
    "changing",
    "cli",
    "clouds",
    "container",
    "cosmos",
    "cost",
    "count",
    "cross-subscription",
    "deploying",
    "discovery",
    "disks",
    "find",
    "graph",
    "groups",
    "inventory",
    "key vault",
    "keyvault",
    "kubernetes",
    "list",
    "lookup",
    "machines",
    "mcp",
    "monitor",
    "non-azure",
    "optimization",
    "orphaned",
    "queries",
    "rbac",
    "resource",
    "resources",
    "show",
    "sql",
    "storage",
    "subscriptions",
    "type",
    "unattached",
    "virtual",
    "websites",
  ],
  "name": "azure-resource-lookup",
}
`;

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "accounts",
  "across",
  "aks",
  "analysis",
  "app service",
  "apps",
  "azure",
  "changing",
  "cli",
  "clouds",
  "container",
  "cosmos",
  "cost",
  "count",
  "cross-subscription",
  "deploy",
  "deploying",
  "discovery",
  "disks",
  "find",
  "graph",
  "groups",
  "inventory",
  "key vault",
  "keyvault",
  "kubernetes",
  "list",
  "lookup",
  "machines",
  "mcp",
  "monitor",
  "non-azure",
  "optimization",
  "orphaned",
  "queries",
  "rbac",
  "resource",
  "resources",
  "show",
  "sql",
  "storage",
  "subscriptions",
  "type",
  "unattached",
  "virtual",
  "websites",
]
`;
